2013-03-25  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sphgtod.c: include stdint.h.
	(sphget_gtod_conv_factor): New API.
	(sphtb2gtod_withfactor): New API.
	(sphgtod): Use sphtb2gtod_withfactor.
	* src/sphgtod.h (sphgtod): Update comment, include @param's.
	(sphget_gtod_conv_factor): New API.
	(sphtb2gtod_withfactor): New API.
	* src/tests/sphgtod_t.c (main): Add test case for
	sphget_gtod_conv_factor and sphtb2gtod_withfactor.

2013-03-25  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sphgtod.c (sphget_tb2gtod_factor): Correct rounding of
	timebase.
	(__SASDebugPrint__): fix debug printf.
	* src/sphtimer.h: Correct CLOCK_MONOTONIC to time computation.
	* src/tests/sphsinglepcqueue_tt.c: Fix compile warnings.
	* src/tests/sphsinglepcqueue_ttt.c: Likewise.

2013-03-22  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sphgtod.c: Add documentation, fix Intel issues and optimize the
	POWER implementation.
	* src/sphgtod.h: Likewise.
	* src/sphtimer.c: Likewise.
	* src/sphtimer.h: Likewise.
	* doc/libsphde-doxygen-sph.doxy: Add src/sphgtod.h.
	* src/tests/sphgtod_t.c: Increase ALLOWABLE_DRIFT value.

2013-03-01  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* src/sphgtod.c: Remove unnecessary line breaks '\' from inline asm.

2013-03-01  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	 * src/sphgtod.c: Remove unnecessary optional clobber list in inline
	 asm that was preventing compilation on some systems.
	 * src/Makefile.in: Regenerated.

2013-03-01  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	 * src/Makefile.am: Added rules for sphgtod to be built into a
	 static-only library, libsphgtod.a.
	 * src/sphgtod.c: New file. Implement libsphgtod.a.
	 * src/sphgtod.h: New file.
	 * src/sphtimer.h (sphfastcpufreq): Declare static so that
	 libsphgtod.a can use this symbol but still link against libsphde.
	 * src/tests/sphgtod_t.c: Test sphgtod.

2013-02-22  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sasatom_powerpc.h (__arch_compare_and_swap): Use isync.